# ocr-project-extraction

./: .gitignore  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  TENANCY_EXTRACTION_FIX.md  demo_tenancy_parser.py  pyproject.toml  requirements.txt
ocr_extractor/: __init__.py  cli.py  excel_writer.py  extractor.py  ocr_engine.py  preprocessor.py  table_detector.py  tenancy_parser.py  test_artifacts.py
tests/: __init__.py  test_excel_writer.py  test_integration.py  test_ocr_engine.py  test_preprocessor.py  test_table_detector.py  test_tenancy_parser.py
